# bukzor-agent-skills

./: .envrc  .gitignore  pyproject.toml
.claude/: todo.md
.claude/todo.kb/: 2026-01-02-000-skill-evolution-for-chatfs-harmonization.md  2026-01-30-000-shared-code-between-skills.md  2026-07-11-000-settle-task-grain-and-store-count-for-design-next.md  2026-07-12-000-Land-v2-2-core-and-classes-rework--T2-.md  2026-07-19-000-Extend-claude-open-tasks-list-to-the-decision-grammars.md
claude-realignment/: SKILL.md
design-next.kb/: 010-mission.md  020-goals.jsonschema.yaml  030-requirements.jsonschema.yaml  040-design.jsonschema.yaml  070-future-work.jsonschema.yaml  CLAUDE.md
design-next.kb/020-goals.kb/: CLAUDE.md  designed-for-deletion.md  mechanism-over-exhortation.md  native-first.md  runtime-portability.md  self-application.md  session-continuity.md  single-source-improvement.md  token-economy.md  write-economy.md
design-next.kb/030-requirements.kb/: CLAUDE.md  action-triggers-enforced-deterministically.md  authorship-boundary.md  classes-detach-cleanly.md  coupling-is-adapter-only.md  coupling-is-layer-3-only.md  (+8 more)
lc-format/: SKILL.md  rationale.md
llm-chat-librarian/: SKILL.md
llm-collab/: CLAUDE.md  SKILL.md  TESTING.md
llm-design-kb/: CLAUDE.md  SKILL.md
llm-discourse-graph/: CLAUDE.md  HACKING.md  SKILL.md
llm-kb/: CLAUDE.md  SKILL.jsonschema.yaml  SKILL.md  migrations.jsonschema.yaml  pyproject.toml
llm-must-read-kb/: CLAUDE.md  SKILL.md
llm-subtask/: CLAUDE.md  SKILL.md
llm-triggers/: CLAUDE.md  SKILL.md
llm-vitals/: CLAUDE.md  SKILL.md
(+336 files in other folders)
